2008-01-20 Gerd Kohlberger <gerdk@svn.gnome.org>
	* data/PointerCapture.xml:
	* data/DwellClick.xml:
	* data/Makefile.am:
	* src/dwell-click-applet.c:
	* src/pointer-capture-applet.c:
	
	Move applet context menus to external XML file
	
	* po/POTFILES.in: Add new XML files

2008-01-15 Francesco Fumanti <frfumanti@svn.gnome.org>

	* src/Makefile.am:

	Remove trailing space after backslash at end-of-line

2008-01-13 Gerd Kohlberger <gerdk@svn.gnome.org>
	* configure.ac:
	* README:

	Post release version increment: 2.21.90

2008-01-13 Gerd Kohlberger <gerdk@svn.gnome.org>
	* NEWS:
	* README:

	Prepare for 2.21.5 release

2008-01-13 Gerd Kohlberger <gerdk@svn.gnome.org>
	* COPYING: Update license information to FDL 1.2

2008-01-13 Francesco Fumanti <frfumanti@svn.gnome.org>

	* MAINTAINERS
	
	Fix the entry for gerdk in the MAINTAINERS file; the 
	entry for frfumanti was fixed during revision 4.

2008-01-11 Gerd Kohlberger <gerdk@svn.gnome.org>
	* Intial commit
	* configure.ac: Bump version to 2.21.5

---------------------------------

Changes can be found in the revisions log on:
https://code.launchpad.net/~mt-devel/mousetweaks/trunk

----------------------------
Pre Version Control Changes
----------------------------

2007-10-12 Gerd Kohlberger <lowfi@chello.at>
	* Split main application into daemon and configuration gui
	* Remove tray icon
	* New Start/Stop button for the daemon
	* Improved command-line options
	* Fixes to make sure mousetweaks can be used in GDM
	* fix: don't use the full argument vector as session restart command

2007-08-22 Gerd Kohlberger <lowfi@chello.at> 
	* l10n: it, fr (Francseco Fumanti)
	* fixed a bug introduced in 0.2.0, which made dwelling with gesture
	  mode unuseable
	* added command-line options
	* updated README and AUTHORS
	* added 'add-applet.sh' shell script. It can be used to launch applets
	  from the command-line 

2007-08-13 Gerd Kohlberger <lowfi@chello.at>
	* added internationlization support
	* moved about dialogs to glade