@@ -1,5 +1,5 @@
 if BUILD_PCA
-pca_schemas = pointer-capture-applet.schemas
+pca_schemas = pointer-capture-applet.schemas.in
 pca_glade   = pointer-capture-applet.glade
 pca_server  = PointerCapture_Factory.server.in
 pca_menu    = PointerCapture.xml
@@ -31,13 +31,14 @@ endif
 xmldir = $(datadir)/mousetweaks
 xml_DATA = ctw.glade $(pca_glade) $(cta_glade)
 
-@INTLTOOL_DESKTOP_RULE@
-
 uidir = $(datadir)/mousetweaks
 ui_DATA = $(pca_menu) $(cta_menu)
 
 schemasdir = @GCONF_SCHEMA_FILE_DIR@
-schemas_DATA = mousetweaks.schemas $(pca_schemas)
+schemas_in_files = mousetweaks.schemas.in $(pca_schemas)
+schemas_DATA = $(schemas_in_files:.schemas.in=.schemas)
+
+@INTLTOOL_SCHEMAS_RULE@
 
 if GCONF_SCHEMAS_INSTALL
 install-data-local:
@@ -59,10 +60,11 @@ endif
 
 EXTRA_DIST =		      \
 	$(xml_DATA)	      \
-	$(schemas_DATA)       \
+	$(schemas_in_files)   \
 	$(server_in_in_files) \
 	$(ui_DATA)
 
 DISTCLEANFILES =           \
 	$(server_DATA)     \
-	$(server_in_files)
+	$(server_in_files) \
+	$(schemas_DATA)
