@@ -5,6 +5,8 @@ data/DwellClick_Factory.server.in.in
 data/PointerCapture_Factory.server.in.in
 data/DwellClick.xml
 data/PointerCapture.xml
+data/mousetweaks.schemas.in
+data/pointer-capture-applet.schemas.in
 src/mt-main.c
 src/mt-ctw.c
 src/mt-dbus.c
